fixed overlapp issue

--- a/css/example.css
+++ b/css/example.css
@@ -10,10 +10,18 @@ body {
 
 /* Masonry Layout */
 .social-feed-element {
-  width: 31%; 
-  margin-left: 10px; 
-  margin-top: 0px;
-  margin-bottom: 10px;
+  width: 32%; 
+  min-width: 145px;
+  margin: 5px;
+  float: left;
+}
+@media (max-width: 800px) { 
+  .social-feed-element {
+    width: 100%; 
+    margin-left: 10px; 
+    margin-top: 0px;
+    margin-bottom: 10px;
+  }
 }
 .social-feed-container {
   width: 100%;
